--- a/android/HACKING
+++ b/android/HACKING
@@ -11,3 +11,7 @@ make -j$(getconf _NPROCESSORS_ONLN)
 # http://stackoverflow.com/questions/16947016/solvedaosp-build-and-sd-card
 mksdcard -l SdCard 1G MySd.img
 emulator -sdcard MySd.img
+
+# Review samples:
+# http://review.cyanogenmod.org/82061
+# https://android-review.googlesource.com/121050
