clang: extend README

--- a/clang/README
+++ b/clang/README
@@ -1,3 +1,23 @@
+= Clang libtooling-based rename
+
+== This tool vs clang-rename
+
+This tool is similar to clang-rename, though there are a number of differences.
+
+Pros:
+
+- old name can be a simple qualified name, no need to manually specify a byte
+  offset
+- rename handles ctor initializer list, too
+- comes with a wrapper to do fully automatic rewriting
+
+Cons:
+
+- handles only rename of class members so far
+- only tested with clang-3.5.0
+
+== Hello world
+
 Example usage:
 
 ----
@@ -9,6 +29,8 @@ If you get missing includes:
 ----
 ln -s /usr/lib64
 ----
+
+== Build system integration
 
 LibreOffice integration example (provided that rename-wrapper is in your PATH):
 
