--- a/clang/README.asciidoc
+++ b/clang/README.asciidoc
@@ -64,4 +64,10 @@ be done with this command:
 bin/find-unprefixed-members -class-name=ns::C test.cxx --
 ----
 
+Or the build system equivalent -- first touch one file that includes the class, then:
+
+----
+make -sr -j8 COMPILER_EXTERNAL_TOOL=1 CCACHE_PREFIX=find-unprefixed-members-wrapper RENAME_ARGS="-class-name=ClassName"
+----
+
 // vim: ft=asciidoc
