clang: update doc

--- a/clang/README.asciidoc
+++ b/clang/README.asciidoc
@@ -9,6 +9,7 @@ Pros:
 - old name can be a simple qualified name, no need to manually specify a byte
   offset
 - rename handles ctor initializer list, too
+- handles macros, even nested ones
 - comes with a wrapper to do fully automatic rewriting
 
 Cons:
@@ -52,22 +53,6 @@ Once the rewriting is done, you can overwrite the original files with the .new o
 
 ----
 for i in $(find . -name "*.new"); do mv -f $i ${i%%.new}; done
-----
-
-== Generating the CSV input
-
-For large classes, generating the CSV input may make sense if the rename logic
-can be automated. E.g. making sure that all members have the `m_` prefix can
-be done with this command:
-
-----
-bin/find-unprefixed-members -class-name=ns::C test.cxx --
-----
-
-Or the build system equivalent -- first touch one file that includes the class, then:
-
-----
-make -sr -j8 COMPILER_EXTERNAL_TOOL=1 CCACHE_PREFIX=find-unprefixed-members-wrapper RENAME_ARGS="-class-name=ClassName"
 ----
 
 // vim: ft=asciidoc
