--- a/gcontacts/README
+++ b/gcontacts/README
@@ -3,5 +3,12 @@ This is intended to be a drop-in replacement for goocaa[1].
 The only problem with goocaa is that it uses the ClientLogin API, which was
 shut down[2] on April 20, 2015.
 
+As an additional feature, the lcontacts script can read data from your own
+LDAP, and write similar output, so gcontacts can search in both your Google and
+LDAP contacts.
+
+Another goodie is the VIM integration, when ft=mail code completion searches in
+your address book.
+
 [1] https://github.com/novel/goocaa
 [2] http://googledevelopers.blogspot.hu/2015/02/reminder-clientlogin-shutdown-scheduled.html
