google contacts: dump a subset as XML as well
In the same format as gcontacts did.

--- a/google/contacts/README
+++ b/google/contacts/README
@@ -1,6 +1,8 @@
 The 'backup' script aims to back up your google contacts events into a
-pretty-printed JSON, i.e. something you can check into git.
+pretty-printed JSON, i.e. something you can check into git. Additionally it
+dumps just name-email pairs into a separate XML, something you can configure
+as address book source.
 
-Documentation: https://developers.google.com/people/v1/getting-started
+Documentation: https://developers.google.com/people/quickstart/python
 
 This is intentionally written in Python3 (not 2).
