lo: drop obsolete rhel5 config
and git-changelog
and picu.py (picasa uploader)
and drop irssi interpreter headers, these only run inside an irssi process anyway
and iBook G4-spefific acpi.py
and locon/crawler-fet.py (last used 4 years ago)
and wipcheck.py (was specific to Frugalware)

(which were python2 scripts, but are now unused)

--- a/google/calendar/README
+++ b/google/calendar/README
@@ -1,6 +1,6 @@
 The 'backup' script aims to back up your google calendar events into a
 pretty-printed JSON, i.e. something you can check into git.
 
-Documentation: https://developers.google.com/calendar/quickstart/python
+Documentation: <https://developers.google.com/calendar/quickstart/python>.
 
 This is intentionally written in Python3 (not 2).
