lo: remove now empty indented-files.txt

--- a/llvm/libtooling/README
+++ b/llvm/libtooling/README
@@ -7,7 +7,7 @@ Tries to flag non-const member functions which could be const.
 Run it in a loop like this:
 
 ----
-for i in $(cat .git/indented-files.cache|grep -v /qa/); do ~/git/vmexam/llvm/libtoling/bin/find-nonconst-methods -paths-file .git/indented-files.cache $i || break; done
+for i in $(cat .git/indented-files2.cache|grep -v /qa/); do ~/git/vmexam/llvm/libtoling/bin/find-nonconst-methods -paths-file .git/indented-files2.cache $i || break; done
 ----
 
 Obsoleted by loplugin:constmethod.
