addr-osmify-py: add missing cast

--- a/osm/addr-osmify-py/README.adoc
+++ b/osm/addr-osmify-py/README.adoc
@@ -1,4 +1,4 @@
-= add-osmify-py
+= addr-osmify-py
 
 Takes an nominatim query (e.g. 'Mészáros utca 58/a, Budapest') and turns it
 into a string that is readable (so that you can save it to your contacts) and
@@ -15,3 +15,11 @@ This implementation is written in Python:
 - [x] tests (100% line coverage)
 
 - [x] static code analysis (pylint)
+
+== Install
+
+----
+python3 -m venv addr-osmify-py-env
+. addr-osmify-py-env/bin/activate
+pip install -r requirements.txt
+----
