addr-osmify-js test: add coverage support
And add more tests, to have 100% statement coverage.

Also fix the case when there are no results from Nominatim, found by
these new tests.

--- a/osm/addr-osmify-py/README.adoc
+++ b/osm/addr-osmify-py/README.adoc
@@ -12,7 +12,7 @@ This implementation is written in Python:
 
 - [x] documentation (this file for users, Python doc strings for developers)
 
-- [x] tests (100% line coverage)
+- [x] tests (100% statement coverage)
 
 - [x] static code analysis (pylint)
 
