--- a/pcal/README
+++ b/pcal/README
@@ -1,3 +1,9 @@
 Dependencies:
 
 	zypper in python3-Pillow python3-PyPDF2 python3-img2pdf
+
+Usage: place images in images/ as 01.jpg, 02.jpg, ..., then run:
+
+	./pdfcal.py
+
+and the result will be produced as out.pdf.
