addr-osmify-ts: fix typo

--- a/osm/addr-osmify-ts/README.adoc
+++ b/osm/addr-osmify-ts/README.adoc
@@ -6,7 +6,7 @@ is also machine-friendly, e.g. OsmAnd can parse it as well.
 
 This implementation is written in TypeScript:
 
-- [X] static typing
+- [x] static typing
 
 - [x] consistent code formatting (clang-format)
 
