--- a/pcal/README
+++ b/pcal/README
@@ -7,3 +7,9 @@ Usage: place images in images/ as 01.jpg, 02.jpg, ..., then run:
 	./pdfcal.py
 
 and the result will be produced as out.pdf.
+
+If an image metadata causes a problem, run:
+
+	mogrify -strip ./01.jpg
+
+to strip the unwanted metadata.
